--- a/docs/.vuepress/components/card.scss
+++ b/docs/.vuepress/components/card.scss
@@ -5,6 +5,7 @@
   overflow: hidden;
   box-shadow: 0 6px 10px 0 rgba(95, 101, 105, 0.15);
   padding-bottom: 8px;
+  margin: 10px;
 
   &-img {
     height: 152px;
@@ -19,5 +20,20 @@
     padding: 8px;
     text-align: left;
     font-size: 14px;
+  }
+}
+
+.footer {
+  padding: 0 8px;
+  font-size: 12px;
+  text-align: left;
+
+  .level {
+    color: #9199A1;
+    margin-bottom: 8px;
+  }
+
+  .price {
+    color: #F01414;
   }
 }
